@@ -68,4 +68,4 @@
 ^local/
 ^MANIFEST\.SKIP
 ^README\.pod
-*.TimeTracker*
+TimeTracker
