@@ -1,0 +1,29 @@
+# Generated by git-ship. See 'git-ship --man' for help or https://github.com/jhthorsen/app-git-ship
+use ExtUtils::MakeMaker;
+WriteMakefile(
+  NAME => 'App::tt',
+  AUTHOR => 'Jan Henning Thorsen <jhthorsen@cpan.org>',
+  LICENSE => 'artistic_2',
+  ABSTRACT_FROM => 'lib/App/tt.pm',
+  VERSION_FROM => 'lib/App/tt.pm',
+  EXE_FILES => [qw( script/tt )],
+  META_MERGE => {
+    resources => {
+      bugtracker => 'https://github.com/jhthorsen/app-tt/issues',
+      homepage => 'https://github.com/jhthorsen/app-tt',
+      repository => 'https://github.com/jhthorsen/app-tt.git',
+    },
+  },
+  BUILD_REQUIRES => {
+  'Test::More' => '0.88'
+}
+,
+  PREREQ_PM => {
+  'Applify' => '0.12',
+  'File::HomeDir' => '1.00',
+  'JSON::XS' => '3.00',
+  'perl' => '5.010001'
+}
+,
+  test => { TESTS => 't/*.t' },
+);
